--- a/index.html
+++ b/index.html
@@ -412,8 +412,7 @@
                         <div class="form-group col-md-11">
                             <draggable @start="hideTips" class="col col-12 medal-zone" v-model="bug_save.characters[character.id].stat_bonuses" group="statbonus" >
                                 <bug-bonus v-for="statbonus in bug_save.characters[character.id].stat_bonuses"
-                                           :statbonus="statbonus"
-                                           :key="statbonus.id">
+                                           :statbonus="statbonus">
                                 </bug-bonus>
                             </draggable>
                         </div>
@@ -434,14 +433,14 @@
                             <select class="custom-select d-block w-100" v-model="tool_type">
                                 <option value="medal">Medal Generator</option>
                                 <option value="item">Item Generator</option>
+                                <option value="statbonus">Stat Bonus Generator</option>
                             </select>
                         </div>
                         <div class="col col-10" v-show="'medal' == tool_type">
                             <div class="form-row">
                                 <div class="col col-3">
-                                    <label>&nbsp;</label>
+                                    <label>Medal:</label>
                                     <select class="custom-select d-block w-100" v-model="badge_generator_selection" @change="generate_badge($event)">
-                                        <option disabled value="">Please select one</option>
                                         <option v-for="badge in badge_data" v-bind:value="badge.id">
                                             {{ badge.name }}
                                         </option>
@@ -458,9 +457,8 @@
                         <div class="col col-10" v-show="'item' == tool_type">
                             <div class="form-row">
                                 <div class="col col-3">
-                                    <label>&nbsp;</label>
+                                    <label>Item</label>
                                     <select class="custom-select d-block w-100" v-model="item_generator_selection" @change="generate_item($event)">
-                                        <option disabled value="">Please select one</option>
                                         <option v-for="item in item_data" v-bind:value="item.id">
                                             {{ item.name }}
                                         </option>
@@ -471,6 +469,29 @@
                                                :item="item"
                                                :key="item.id">
                                     </bug-item>
+                                </draggable>
+                            </div>
+                        </div>
+                        <div class="col col-10" v-show="'statbonus' == tool_type">
+                            <div class="form-row">
+                                <div class="col col-3">
+                                    <label>Type:</label>
+                                    <select class="custom-select d-block w-100" v-model="statbonus_generator_type" @change="generate_statbonus($event)">
+                                        <option value="0" selected="selected">HP</option>
+                                        <option value="1">Attack</option>
+                                        <option value="2">Defense</option>
+                                        <option value="3">TP</option>
+                                        <option value="4">MP</option>
+                                    </select>
+                                </div>
+                                <div class="col col-2">
+                                    <label>Amount:</label>
+                                    <input type="number" class="form-control" v-model="statbonus_generator_amount" @change="generate_statbonus($event)"/>
+                                </div>
+                                <draggable @start="hideTips" class="col col-7 medal-zone" v-model="statbonus_generator_inventory" group="statbonus" >
+                                    <bug-bonus v-for="statbonus in statbonus_generator_inventory"
+                                              :statbonus="statbonus">
+                                    </bug-bonus>
                                 </draggable>
                             </div>
                         </div>
@@ -627,6 +648,13 @@
                     'Merab',
                     'Shades'
                 ],
+                stat_bonus_names: [
+                    'hp',
+                    'atk',
+                    'def',
+                    'tp',
+                    'medal'
+                ],
                 description_find_replace: {
                     ['|menu,46|']: 'Vi',
                     ['|menu,47|']: 'Kabbu',
@@ -644,6 +672,9 @@
             item_data: {},
             item_generator_selection: null,
             item_generator_inventory: [],
+            statbonus_generator_type: 0,
+            statbonus_generator_amount: 1,
+            statbonus_generator_inventory: [],
             bug_save: {
                 position: {x: 0, y: 0, z: 0},
                 flag_variables: [],
@@ -902,6 +933,16 @@
                 } else {
                     // noinspection JSUnusedGlobalSymbols
                     this.item_generator_inventory = [];
+                }
+                this.resetTooltips();
+            },
+            generate_statbonus: function (ev) {
+                if(this.statbonus_generator_type && this.statbonus_generator_amount){
+                    // noinspection JSUnusedGlobalSymbols
+                    this.statbonus_generator_inventory = [{amount: this.statbonus_generator_amount, type: this.statbonus_generator_type}];
+                } else {
+                    // noinspection JSUnusedGlobalSymbols
+                    this.statbonus_generator_inventory = [];
                 }
                 this.resetTooltips();
             },
